# odyssey-python

./: .gitignore  API_REFERENCE.md  DEVELOPER.md  README.md  pyproject.toml
examples/minimal/: main.py
examples/recordings/: main.py
src/odyssey/: __init__.py  client.py  config.py  exceptions.py  types.py
src/odyssey/_internal/: __init__.py  auth.py  recordings.py  regions.py  session.py  signaling.py  simulations.py  telemetry.py  webrtc.py  whep.py
tests/: __init__.py  test_simulate.py
